--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -29,6 +29,13 @@
         android:dialogTitle="@string/button_backlight_title"
         android:persistent="false" />
 
+    <!-- PA Pie control -->
+    <PreferenceScreen
+        android:key="pa_pie_control"
+        android:fragment="com.android.settings.paranoid.Pie"
+        android:summary="@string/pa_pie_controls_summary"
+        android:title="@string/pa_pie_controls_title" />
+
     <!-- Device Specific Bluetooth Input settings -->
     <Preference
         android:key="bluetooth_input_settings">
